# newapp

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py
.github/workflows/: build-and-test.yml
newapp/: __init__.py  cli.py
tests/: test_cli.py  test_newapp.py
