[tool.poetry]
name = "newapp"
version = "0.1.0"
description = ""
authors = ["Kurt Abersold <kurtabersold@gmail.com>"]

[tool.poetry.scripts]
cli = "newapp.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
