[tool.poetry]
name = "newapp"
version = "0.1.0"
description = "This is not a real app, It's just a template."
license = "MIT"
authors = ["Kurt Abersold <kurtabersold@gmail.com>"]
readme = "README.md"
repository = "https://github.com/kurtabersold/newapp"

[tool.poetry.scripts]
cli = "newapp.cli:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.6.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov"
testpaths = [
    "tests",
]

# [tool.coverage]
[tool.coverage.run]
branch = true
source = [
    "newapp",
]
[tool.coverage.report]
fail_under = 85
precision = 2



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
